<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.MainActivity">

    <HorizontalScrollView
        android:id="@+id/activity_main_function_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorFunctionArea"
        android:scrollbars="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_go_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/text_go_to_login_page" />

            <Button
                android:id="@+id/button_load_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/text_load_money" />

            <Button
                android:id="@+id/button_load_verify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/text_load_verify" />

            <Button
                android:id="@+id/button_load_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/text_load_category" />

            <Button
                android:id="@+id/button_load_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_load_genre" />

        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/activity_main_show_area"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/activity_main_function_area"
        android:background="@color/colorContentArea">

        <TextView
            android:id="@+id/activity_main_show_area_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>
</RelativeLayout>
